--- a/src/style.css
+++ b/src/style.css
@@ -1,43 +1,56 @@
+body {
+  height: 100vh;
+  margin: 0;
+  font-family: "Cormorant Garamond", serif;
+  
+}
+
 nav {
   display: flex;
   justify-content: space-around;
 }
 
-
-
 #heading {
-  font-family: "Cormorant Garamond", serif;
+  grid-row: span 1;
+  
+}
+
+#content {
+  display: grid;
+  grid-template-rows: repeat(7, 1fr);
+}
+
+.abouttxt {
+  width: 300px;
+  font-size:18px ;
+}
+
+#title {
+  grid-row: span 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: rgb(255, 124, 124);
   font-weight: 600;
   font-style: italic;
   font-size: 48px;
 }
 
-#content {
+.container {
+  grid-row: span 3;
   display: flex;
-  flex-direction: column;
-  flex: 1;
-  justify-content: center;
-}
-
-#title {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  background-color: antiquewhite;
-}
-
-#container {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  height: 200px;
- 
   background-color: beige;
 }
 
-#pizza {
-  width: 200px;
-  border-radius: 60px;
+#sectiontwo {
+  grid-row: span 3;
+  background-color: rgb(195, 255, 195);
+}
+
+.pizza {
+  width: 300px;
+  border-radius: 10px;
 }
