--- a/src/style.css
+++ b/src/style.css
@@ -2,31 +2,38 @@ body {
   height: 100vh;
   margin: 0;
   font-family: "Cormorant Garamond", serif;
-  
 }
 
 nav {
   display: flex;
   justify-content: space-around;
+  background-color: rgb(255, 124, 124);
 }
+
+button {
+  background-color:#fd4f38af;
+  font-size: 18px;
+  border-style: none;
+  height: 20px;
+  font-size: 10px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
 
 #heading {
   grid-row: span 1;
-  
 }
 
 #content {
   display: grid;
-  grid-template-rows: repeat(7, 1fr);
+  height: 95vh;
 }
 
-.abouttxt {
-  width: 300px;
-  font-size:18px ;
-}
 
 #title {
-  grid-row: span 1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -38,11 +45,17 @@ nav {
 }
 
 .container {
-  grid-row: span 3;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   background-color: beige;
+}
+
+.abouttxt {
+  width: 300px;
+  font-size:18px;
+ 
+  grid-column: 0;
 }
 
 #sectiontwo {
@@ -51,6 +64,25 @@ nav {
 }
 
 .pizza {
-  width: 300px;
+  width: 350px;
   border-radius: 10px;
+}
+
+.designpngs {
+  width: 80px;
+  grid-row: 8;
+  grid-column: 1;
+  margin-left: 35px;
+}
+
+.textContainer {
+  display: grid;
+  grid-template-rows: repeat(10,10%);  
+  grid-template-columns: repeat(10,10%);
+}
+
+#tomato {
+  grid-column: 1;
+  grid-row: 9;
+  width: 120px;
 }
