--- a/src/style.css
+++ b/src/style.css
@@ -23,18 +23,16 @@ button:hover {
 }
 
 
-#heading {
-  grid-row: span 1;
-}
-
 #content {
   display: grid;
-  height: 95vh;
+  height: 100vh;
+  grid-template-rows: repeat(10, 10%);
 }
 
 
 #title {
   display: flex;
+  grid-row: span 1;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -46,20 +44,19 @@ button:hover {
 
 .container {
   display: flex;
+  grid-row: span 5;
   justify-content: space-evenly;
   align-items: center;
   background-color: beige;
 }
 
 .abouttxt {
-  width: 300px;
+  width: 350px;
   font-size:18px;
- 
   grid-column: 0;
 }
 
 #sectiontwo {
-  grid-row: span 3;
   background-color: rgb(195, 255, 195);
 }
 
@@ -85,4 +82,9 @@ button:hover {
   grid-column: 1;
   grid-row: 9;
   width: 120px;
+}
+
+#contactContainer {
+  display: flex;
+  
 }
