--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+* {border: 1px Solid red}
+
 body {
   height: 100vh;
   margin: 0;
@@ -27,12 +29,14 @@ button:hover {
   display: grid;
   height: 100vh;
   grid-template-rows: repeat(10, 10%);
+  grid-template-columns: repeat(10, 10%);
 }
 
 
 #title {
   display: flex;
   grid-row: span 1;
+  grid-column: span 10;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -45,6 +49,7 @@ button:hover {
 .container {
   display: flex;
   grid-row: span 5;
+  grid-column: span 10;
   justify-content: space-evenly;
   align-items: center;
   background-color: beige;
@@ -85,6 +90,21 @@ button:hover {
 }
 
 #contactContainer {
-  display: flex;
-  
+  position: relative;
+  grid-row:  2/11;
+  grid-column: span 10;
+}
+
+#italyArt {
+  width: 100%;
+  height: 100%;
+  opacity: 0.8;
+}
+
+#addressTxt {
+  position: absolute;
+  width: 200px;
+  font-size: 32px;
+  top: 30%; 
+  left: 40%;
 }
